add if and if else to JS.

--- a/index.html
+++ b/index.html
@@ -17,21 +17,37 @@
             <input id="age" class="form-control" type="text">
         </div>
         <div class="form-group">
-          <label for="gender">What gender to you indentify as?</label>
-          <select id="gender" class="form-control" type="text"></select>
+          <label for="gender">What gender do you indentify as?</label>
+          <select id="gender" class="form-control" type="text">
+            <option value="female">Female</option>
+            <option value="male">Male</option>
+          </select>
         </div>
         <div class="form-group">
           <label for="genderPreference">What gender do you romantically prefer?</label>
           <select id="genderPref" class="form-control" type="text">
-            <option value="female">F
+            <option value="female">Female</option>
+            <option value="male">Male</option>
+          </select>
         </div>
 
           <button type="submit" class="btn">Show me my celebrity SOULMATE!</button>
       </form>
 
-      <div id="result">
-      <p>Your celebrity SOULMATE is $<span id="rate"></span>.</p>
+      <div id="yourceleb">
+      <p>Your celebrity SOULMATE is <span id="output"></span>.</p>
     </div>
+
+      <div class="A-H">
+        <p id="A">Barbie</p>
+        <p id="B">B</p>
+        <p id="C">C</p>
+        <p id="D">D</p>
+        <p id="E">E</p>
+        <p id="F">F</p>
+        <p id="G">G</p>
+        <p id="H">H</p>
+      </div>
     </div>
 
 
